hn_tests/opt/failing/udp_echo_client-2.hn
hnMain = {
	c = udp_connect "localhost" 99
	tb start_time = {
		t4 end_time = print 0
		t3 reply = bind time_msec t4
		bind (udp_receive c) t3
	}
	forever (bind time_msec tb)
}